<resources>
    <string name="app_name">ToDo</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="add_item">Add Item</string>
    <string name="enter_item">Enter Item</string>
    <string name="hint_item">Enter Item</string>
    <string name="hint_qty">Quantity</string>
    <string name="hint_color">Color</string>
    <string name="hint_size">Size</string>
    <string name="save_button">Save</string>
    <string name="sample_text">Add your text here</string>
    <string name="confirm_text">Are you sure you want to delete?</string>
    <string name="toolbar_title">Shopping List</string>
</resources>