<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_id"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="20dp"
        android:padding="8dp"
        android:background="@android:color/transparent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="24dp"
            android:scrollbarSize="12dp">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:fontFamily="@font/courgette"
                android:text="@string/enter_item"
                android:textColor="@color/black"
                android:textSize="30sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/babyItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/title"
                android:fontFamily="@font/courgette"
                android:hint="@string/hint_item"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/itemQuantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/babyItem"
                android:fontFamily="@font/courgette"
                android:hint="@string/hint_qty"
                android:inputType="numberDecimal"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/itemColor"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemQuantity"
                android:fontFamily="@font/courgette"
                android:hint="@string/hint_color"
                android:textColor="@color/black" />

            <EditText
                android:id="@+id/itemSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/itemColor"
                android:fontFamily="@font/courgette"
                android:hint="@string/hint_size"
                android:inputType="number"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/itemSize"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="5dp"
                android:background="@drawable/button_gradient"
                android:fontFamily="@font/amaranth_bold"
                android:text="@string/save_button"
                android:textSize="18dp"
                android:textStyle="bold"
                app:backgroundTint="@color/cardview_shadow_end_color"
                app:backgroundTintMode="src_atop" />
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>